--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
@@ -15,6 +16,9 @@
         android:theme="@style/Theme.Incense"
         tools:targetApi="31">
         <activity
+            android:name=".Usermessage"
+            android:exported="false" />
+        <activity
             android:name=".SuccessLogin"
             android:exported="false" />
         <activity
@@ -23,7 +27,6 @@
         <activity
             android:name=".NewAccount"
             android:exported="false" />
-
         <activity
             android:name=".Account"
             android:exported="false" />
